[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
redis.workspace = true # = "0.24"
serde_json.workspace = true # = "1.0"
shared.workspace = true # = { path = "../shared" }
tokio.workspace = true # = { version = "1", features = ["full"] }
uuid.workspace = true # = { version = "1.0", features = ["v4"] }
